# haikuish

./: .coverage  .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: kaytto_ohje.md  maarittelydokumentti.md  testausraportti.md  toteutusdokumentti.md
dokumentaatio/viikkoraportit/: viikko1.md  viikko2.md  viikko3.md  viikko4.md  viikko5.md  viikko6.md  viikko7.md
src/: haiku.py  index.py  markov.py  process_data.py  trie.py
src/data/: mini_corpus.txt  mini_minicorpus.txt  preprocess.py  test_corpus.txt
src/tests/: markov_test.py  test_markov.py  test_trie.py
