[project]
name = "haikuish"
version = "0.1.0"
description = ""
authors = [
    {name = "anniemx",email = "163184360+anniemx@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
