[project]
name = "haikuish"
version = "0.1.0"
description = ""
authors = [
    {name = "anniemx",email = "163184360+anniemx@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "nltk (>=3.9.2,<4.0.0)",
    "invoke (>=2.2.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
invoke = "^2.2.0"
numpy = "^1.21.1"
